# claude-rts

./: .gitattributes  .gitignore  CLAUDE.md  README.md  ROADMAP.md  claude_usage_probe.py  pyproject.toml
.devcontainer/: Dockerfile  cpu-poller.sh  devcontainer.json  post-create.sh  start-cpu-poller.sh  start-novnc.sh
.github/workflows/: ci.yml  publish-util-image.yml  release.yml
claude_rts/: Dockerfile.util  __main__.py  ansi_strip.py  blueprint.py  config.py  container_spec.py  cred_store.py  dev_config.py  discovery.py  event_bus.py  mcp_server.py  probe_loop.sh  profile_manager.py  pty_compat.py  qa_runner.py  qa_scenario.py  server.py  sessions.py  startup.py  util_container.py
claude_rts/cards/: __init__.py  base.py  blueprint_card.py  canvas_claude_card.py  card_registry.py  claude_usage_card.py  container_starter_card.py  registry.py  service_card.py  terminal_card.py  widget_card.py
claude_rts/dev_presets/canvas-claude/: config.json
claude_rts/dev_presets/canvas-switch-test/: config.json
claude_rts/dev_presets/claude-api/: config.json
claude_rts/dev_presets/container-actions-qa/: config.json
claude_rts/dev_presets/container-manager/: config.json
claude_rts/dev_presets/default/: config.json
claude_rts/dev_presets/human-qa/: config.json
claude_rts/migrations/: __init__.py  canvas_236.py
claude_rts/static/: index.html
docs/: adr-blueprint-execution-model.md  cards-and-canvas.md  e2e-qa-workflow.md  feature-testing-guide.md  human-qa-checklist.md  index.md  issue-221-qa-convenience.md  qa-scenarios.md  state-model.md  tailscale-setup.md
docs/debug/: probe-handoff.md
docs/qa/: pr-189-e2e-plan.md  pr-189-human-qa-checklist.md
electron/: .gitignore  README.md  main.js  package.json  preload.js
qa/: canvas.claude-usage-test.json  canvas.m6-qa.json  config.claude-usage-test.json  config.qa.json  setup-containers.sh  teardown-containers.sh
qa/hongy-probe/: config.json
qa_scenarios/: syn-001-container-terminal.py
scripts/: check_docker_caps.py
tests/: conftest.py  test_blueprint_api.py  test_blueprint_card.py  test_canvas_claude_api.py  test_canvas_claude_card.py  test_canvas_migration.py  test_canvas_switch.py  test_claude_api.py  test_claude_usage_card.py  test_config.py  test_container_e2e.py  test_container_manager.py  test_container_spec.py  test_container_starter_card.py  test_cred_store.py  test_dev_config.py  test_discovery.py  test_event_bus.py  test_hydration.py  test_issue221_profiles_mount.py  test_main.py  test_mcp_server.py  test_profile_manager.py  test_qa_runner.py  test_registry.py  test_server.py  test_server_claude_usage.py  test_server_cred_store.py  test_server_credentials.py  test_server_profiles.py  test_service_card.py  test_sessions.py  test_startup.py  test_state_ownership_static.py  test_terminal_card.py  test_util_container.py  test_vm_manager.py
tests/e2e/: conftest.py  test_blueprint_e2e.py  test_compat.py  test_container_manager_e2e.py  test_cross_browser_sync.py  test_issue221_qa.py  test_mobile_blocking.py  test_pr152_starring_rename_recovery.py  test_pr268_boot_spawn_e2e.py  test_smoke.py  test_spawn_registry_e2e.py  test_start_claude.py  test_vm_manager_e2e.py  test_vm_manager_real_e2e.py
(+23 files in other folders)
