[project]
name = "supreme-claudemander"
version = "0.1.0"
description = "RTS-style terminal canvas for devcontainer hubs"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "ptyprocess>=0.7; sys_platform != 'win32'",
    "loguru>=0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4",
]

[project.scripts]
supreme-claudemander = "claude_rts.__main__:main"

[tool.setuptools.packages.find]
include = ["claude_rts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
