[project]
name = "supreme-claudemander"
version = "0.1.0"
description = "RTS-style terminal canvas for devcontainer hubs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hong Yang", email = "hooong.yang@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "aiohttp>=3.9",
    "ptyprocess>=0.7",
    "loguru>=0.7",
    "pyte>=0.8",
]

[project.optional-dependencies]
windows = [
    "pywinpty>=2.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4",
]
e2e = [
    "pytest>=8.0",
    "pytest-playwright>=0.4",
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/hyang0129/supreme-claudemander"
Repository = "https://github.com/hyang0129/supreme-claudemander"
Issues = "https://github.com/hyang0129/supreme-claudemander/issues"

[project.scripts]
supreme-claudemander = "claude_rts.__main__:main"

[tool.setuptools.packages.find]
include = ["claude_rts*"]

[tool.setuptools.package-data]
claude_rts = [
    "static/*.html",
    "static/**/*",
    "dev_presets/**/*.json",
    "Dockerfile.util",
    "mcp_server.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "requires_pty: marks tests as requiring a real PTY (deselect with -m 'not requires_pty')",
    "real_docker: marks tests as requiring real Docker containers (not run in CI)",
]

[tool.ruff]
target-version = "py310"
line-length = 120
